# epis-kg

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run-demo.ps1  run-demo.sh
.github/workflows/: ci.yml
artifacts/benchmark_20260703_095430/: ABLATION.md  REPORT.md  ablation.json  predictions.csv  report.json  signals_test.json  signals_validation.json  tuned_params.json
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: GraphCanvas.tsx  MetricsPanel.tsx  NodeInspector.tsx  QueryBar.tsx  ThemeToggle.tsx
frontend/components/edges/: ContradictsEdge.tsx
frontend/components/nodes/: ClaimNode.tsx  DocumentNode.tsx  EvidenceNode.tsx  RhetoricNode.tsx  SourceNode.tsx
frontend/hooks/: useGraphData.ts  useGraphSocket.ts  useTheme.ts
frontend/lib/: api.ts  layout.ts  style.ts  transform.ts  types.ts
scripts/: generate_plots.py  quality_probe.py  test_deepseek_connection.py
services/agentic_reasoning/: Dockerfile  pyproject.toml
services/agentic_reasoning/agentic_reasoning/: __init__.py  cache.py  consensus.py  llm_client.py  state.py  worker.py
services/agentic_reasoning/agentic_reasoning/agents/: __init__.py  consensus_agents.py  contradiction.py  extractor.py  reviewer.py  rhetoric.py
services/agentic_reasoning/agentic_reasoning/prompts/: __init__.py
services/agentic_reasoning/agentic_reasoning/workflows/: __init__.py  graph.py
services/agentic_reasoning/tests/: test_consensus.py  test_llm_client.py  test_reasoning_graph.py
services/api_gateway/: Dockerfile  pyproject.toml
services/api_gateway/api_gateway/: __init__.py  config.py  demo.py  dependencies.py  graph_service.py  main.py  schemas.py
services/api_gateway/api_gateway/retrievers/: __init__.py  text2cypher.py  vector_cypher.py
services/api_gateway/api_gateway/routers/: graph.py  health.py  ingest.py  metrics.py  query.py  ws.py
services/api_gateway/tests/: test_api.py
services/graph_layer/: Dockerfile  pyproject.toml
services/graph_layer/graph_layer/: __init__.py  connection.py  constraints.cypher  constraints.py  credibility.py  llm.py  migrate.py  pipeline.py  writer.py
services/graph_layer/tests/: test_credibility.py  test_writer_params.py
services/ingestion_service/: Dockerfile  pyproject.toml
services/ingestion_service/ingestion_service/: __init__.py  broker.py  main.py  sanitize.py  seed.py
services/ingestion_service/ingestion_service/sources/: __init__.py  base.py  file_source.py  http_source.py
services/ingestion_service/tests/: test_sanitize.py
