[project]
name = "agentic-reasoning"
version = "1.0.0"
description = "LangGraph multi-agent orchestrator for Epis-KG: claim extraction, rhetorical analysis, and schema-validated review with cyclic self-correction."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.28",
    "langchain-core>=0.3",
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
    "redis>=5.0",
    "numpy>=1.26",
    "pydantic>=2.7",
    "tenacity>=8.5",
    "graph-schema",
    "epistemic-math",
    "graph-layer",
    "ingestion-service",
    "observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_reasoning"]
