[project]
name = "api-gateway"
version = "1.0.0"
description = "FastAPI gateway for Epis-KG: GraphRAG retrieval, graph topology, epistemic metrics, ingestion trigger, and realtime WebSocket updates."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.26",
    "neo4j-graphrag>=1.18",
    "redis>=5.0",
    "networkx>=3.3",
    "pydantic>=2.7",
    "graph-schema",
    "epistemic-math",
    "graph-layer",
    "ingestion-service",
    "observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_gateway"]
