[project]
name = "graph-layer"
version = "1.0.0"
description = "Neo4j persistence, neo4j-graphrag pipeline wrappers, and epistemic graph writer for Epis-KG."
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.26",
    "neo4j-graphrag>=1.18",
    "networkx>=3.3",
    "pydantic>=2.7",
    "graph-schema",
    "epistemic-math",
    "observability",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
    "openai>=1.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph_layer"]
