[project]
name = "ingestion-service"
version = "1.0.0"
description = "Epis-KG data ingestion: scrapers/API consumers, sanitisation, rate limiting, and Redis Stream publishing."
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "tenacity>=8.5",
    "graph-schema",
    "observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion_service"]
